module(name = "das-proto")
bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "com_google_absl")
bazel_dep(name = "rules_apple", version = "3.16.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "protoc-gen-validate", version = "1.0.4.bcr.2", repo_name = "com_envoyproxy_protoc_gen_validate")
bazel_dep(name = "apple_support", version = "1.17.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_go", version = "0.52.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a", repo_name = "com_google_googleapis")
# bazel_dep(name = "rules_python", version = "1.0.0")
# bazel_dep(name = "envoy_api", version = "0.0.0-20241214-918efc9")
bazel_dep(name = "gazelle", version = "0.41.0", repo_name = "bazel_gazelle")
# bazel_dep(name = "bazel_features", version = "1.23.0")
# bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")
# bazel_dep(name = "bazel_skylib", version = "1.7.1")
# bazel_dep(name = "rules_cc", version = "0.0.16")
# bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "grpc", version = "1.69.0", repo_name = "com_github_grpc_grpc")

